Cleaned up vector.
Time to start erosion.

--- a/Flood routing with graphical rendering.vcxproj.filters
+++ b/Flood routing with graphical rendering.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClCompile Include="heightmap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="physicalvector.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AllegroEngine.h">
@@ -50,6 +53,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="heightmap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="physicalvector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
