--- a/Flood routing with graphical rendering.vcxproj
+++ b/Flood routing with graphical rendering.vcxproj
@@ -87,12 +87,14 @@
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="heightmap.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="physicalvector.cpp" />
     <ClCompile Include="region.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AllegroEngine.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="heightmap.h" />
+    <ClInclude Include="physicalvector.h" />
     <ClInclude Include="region.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
