--- a/Flood routing with graphical rendering.vcxproj
+++ b/Flood routing with graphical rendering.vcxproj
@@ -86,6 +86,7 @@
     <ClCompile Include="AllegroEngine.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="heightmap.cpp" />
+    <ClCompile Include="layereddata.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="physicalvector.cpp" />
     <ClCompile Include="region.cpp" />
@@ -94,6 +95,7 @@
     <ClInclude Include="AllegroEngine.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="heightmap.h" />
+    <ClInclude Include="layereddata.h" />
     <ClInclude Include="physicalvector.h" />
     <ClInclude Include="region.h" />
   </ItemGroup>
