--- a/Flood routing with graphical rendering.vcxproj.filters
+++ b/Flood routing with graphical rendering.vcxproj.filters
@@ -64,5 +64,8 @@
     <ClInclude Include="layereddata.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="togglelatch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
