--- a/Flood routing with graphical rendering.vcxproj
+++ b/Flood routing with graphical rendering.vcxproj
@@ -115,13 +115,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:/allegro/include;C:/libnoise/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Program Files (x86)\AMD_APP\include;C:/allegro/include;C:/libnoise/include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:/allegro/lib;C:/libnoise/bin;C:/boost/boost_1_51/lib;</AdditionalLibraryDirectories>
-      <AdditionalDependencies>lib/Debug/WindowCreator.lib;lib/Debug/AlwayLib.lib;libboost_thread-vc100-mt-gd-1_51.lib;libnoise.lib;allegro-5.0.7-monolith-md-debug.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Program Files (x86)\AMD_APP\lib\x86;C:/allegro/lib;C:/libnoise/bin;C:/boost/boost_1_51/lib;</AdditionalLibraryDirectories>
+      <AdditionalDependencies>OpenCL.lib;lib/Debug/WindowCreator.lib;lib/Debug/AlwayLib.lib;libboost_thread-vc100-mt-gd-1_51.lib;libnoise.lib;allegro-5.0.7-monolith-md-debug.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release2|Win32'">
@@ -181,15 +181,15 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:/allegro/include;C:/libnoise/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:/allegro/include;C:/libnoise/include;C:\Program Files (x86)\AMD_APP\include;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>d3dx11.lib;lib/AlwayLib.lib;lib/WindowCreator.lib;libboost_thread-vc100-mt-1_51.lib;libnoise.lib;allegro-5.0.7-monolith-md.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:/allegro/lib;C:/libnoise/bin;C:/boost/boost_1_51/lib;</AdditionalLibraryDirectories>
+      <AdditionalDependencies>OpenCL.lib;d3dx11.lib;lib/AlwayLib.lib;lib/WindowCreator.lib;libboost_thread-vc100-mt-1_51.lib;libnoise.lib;allegro-5.0.7-monolith-md.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Program Files (x86)\AMD_APP\lib\x86;C:/allegro/lib;C:/libnoise/bin;C:/boost/boost_1_51/lib;</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -211,32 +211,41 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <None Include="allegro-5.0.7-monolith-md-debug.dll" />
+    <None Include="hello_world_kernel.cl" />
+    <None Include="index_add_kernel.cl" />
     <None Include="malgun.ttf" />
     <None Include="malgunbd.ttf" />
+    <None Include="OpenCL.dll" />
     <None Include="other_terrain.bmp" />
     <None Include="other_water.bmp" />
     <None Include="tangerineslice.png" />
     <None Include="test_terrain.bmp" />
     <None Include="test_water.bmp" />
+    <None Include="vector_add_kernel.cl" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AllegroEngine.cpp" />
     <ClCompile Include="color.cpp" />
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="gpgpu_virtualPipes.cpp" />
     <ClCompile Include="heightmap.cpp" />
     <ClCompile Include="layereddata.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="parse.cpp" />
     <ClCompile Include="vector3.cpp" />
     <ClCompile Include="region.cpp" />
     <ClCompile Include="virtualPipes.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AllegroEngine.h" />
+    <ClInclude Include="cl.hpp" />
     <ClInclude Include="colors.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="enums.h" />
+    <ClInclude Include="gpgpu_virtualPipes.h" />
     <ClInclude Include="heightmap.h" />
     <ClInclude Include="layereddata.h" />
+    <ClInclude Include="parse.h" />
     <ClInclude Include="vector3.h" />
     <ClInclude Include="region.h" />
     <ClInclude Include="togglelatch.h" />
