--- a/Flood routing with graphical rendering.vcxproj.filters
+++ b/Flood routing with graphical rendering.vcxproj.filters
@@ -19,6 +19,12 @@
     <Filter Include="Source Files\Unused">
       <UniqueIdentifier>{e787c10d-796f-47d4-9fc6-bdd62a10fca0}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\openCL">
+      <UniqueIdentifier>{f8dbecf8-139f-4514-a80a-8795d3d11f90}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\openCL">
+      <UniqueIdentifier>{af4d1ebe-f435-45bb-9541-afb1530f85e7}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="allegro-5.0.7-monolith-md-debug.dll" />
@@ -33,11 +39,21 @@
     <None Include="other_water.bmp">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="test_terrain.bmp">
-      <Filter>Resource Files</Filter>
-    </None>
     <None Include="test_water.bmp">
       <Filter>Resource Files</Filter>
+    </None>
+    <None Include="OpenCL.dll" />
+    <None Include="vector_add_kernel.cl">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="hello_world_kernel.cl">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="index_add_kernel.cl">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="test_terrain.bmp">
+      <Filter>Source Files</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -67,6 +83,12 @@
     </ClCompile>
     <ClCompile Include="color.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="gpgpu_virtualPipes.cpp">
+      <Filter>Source Files\openCL</Filter>
+    </ClCompile>
+    <ClCompile Include="parse.cpp">
+      <Filter>Source Files\openCL</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -99,6 +121,15 @@
     </ClInclude>
     <ClInclude Include="colors.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="gpgpu_virtualPipes.h">
+      <Filter>Header Files\openCL</Filter>
+    </ClInclude>
+    <ClInclude Include="cl.hpp">
+      <Filter>Header Files\openCL</Filter>
+    </ClInclude>
+    <ClInclude Include="parse.h">
+      <Filter>Header Files\openCL</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
