--- a/Flood routing with graphical rendering.vcxproj.filters
+++ b/Flood routing with graphical rendering.vcxproj.filters
@@ -55,6 +55,8 @@
     <None Include="test_terrain.bmp">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="stepFlux_kernel.cl" />
+    <None Include="updateVolume_kernel.cl" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AllegroEngine.cpp">
