Pre-test backup.
Did up to the flow part.

--- a/Flood routing with graphical rendering.vcxproj
+++ b/Flood routing with graphical rendering.vcxproj
@@ -211,6 +211,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <None Include="allegro-5.0.7-monolith-md-debug.dll" />
+    <None Include="findFlowVectors_kernel.cl" />
     <None Include="hello_world_kernel.cl" />
     <None Include="index_add_kernel.cl" />
     <None Include="malgun.ttf" />
