--- a/Flood routing with graphical rendering.vcxproj.filters
+++ b/Flood routing with graphical rendering.vcxproj.filters
@@ -58,6 +58,7 @@
     <None Include="stepFlux_kernel.cl" />
     <None Include="updateVolume_kernel.cl" />
     <None Include="findFlowVectors_kernel.cl" />
+    <None Include="cleanup_kernel.cl" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AllegroEngine.cpp">
